; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_persist.c_create_relative_uri.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_persist.c_create_relative_uri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@URL_ESCAPE_SPACES_ONLY = common dso_local global i32 0, align 4
@URL_DONT_ESCAPE_EXTRA_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_relative_uri(%struct.TYPE_3__* %0, i32* %1, i32** %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32** %2, i32*** %6, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* @URL_ESCAPE_SPACES_ONLY, align 4
  %17 = load i32, i32* @URL_DONT_ESCAPE_EXTRA_INFO, align 4
  %18 = or i32 %16, %17
  %19 = load i32**, i32*** %6, align 8
  %20 = call i32 @CoInternetCombineUrlEx(i64 %14, i32* %15, i32 %18, i32** %19, i32 0)
  br label %25

21:                                               ; preds = %3
  %22 = load i32*, i32** %5, align 8
  %23 = load i32**, i32*** %6, align 8
  %24 = call i32 @create_uri(i32* %22, i32 0, i32** %23)
  br label %25

25:                                               ; preds = %21, %11
  %26 = phi i32 [ %20, %11 ], [ %24, %21 ]
  ret i32 %26
}

declare dso_local i32 @CoInternetCombineUrlEx(i64, i32*, i32, i32**, i32) #1

declare dso_local i32 @create_uri(i32*, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
